参数修改